fixing safari bug with flexbox wrap on settings

--- a/app/react/App/scss/modules/_settings.scss
+++ b/app/react/App/scss/modules/_settings.scss
@@ -4,6 +4,10 @@
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   overflow: auto;
+  @media(min-width: 1024px) {  
+    -webkit-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+  }
 }
 
 .settings-navigation,
